# javu

./: .env  Docker-compose.prod.yml  Dockerfile  FINALIZATION_REPORT.md  MODEL_CARD.md  Makefile  Procfile  RUNBOOK.md  SAFETY_EVAL_REPORT.md  SECURITY.md  THREAT_MODEL.md  api.py  bootstrap.py  cons_server.py  docker-compose.dev.yml  docker-compose.yml  goal_stack.json  healthcheck.py  main.py  mypy.ini  observability_boot.py  pyproject.toml  requirements.txt  seccomp-min.json
agent_io/: __init__.py  actuator.py  sensor.py
benchmarks/: README.MD  __init__.py  agent.yaml  goal_achievement_bench.py  memory_recall_bench.py  rag.yaml  reasoning.yaml  reasoning_depth_bench.py  tool_use.yaml
config/: exp.yaml  planetary_policy.yaml  purpose_charter.yaml  tools.yaml
data/: manifest.yaml
db/: chroma.sqlite3
evaluation/: __init__.py  generalization_scenarios.json  long_run_scenarios.json  memory_eval.py  robustness_scenarios.json  run_generalization_eval.py  run_long_run_eval.py  run_robustness_eval.py
evidence/: audit_hash_chain.txt  fairness_report.json  governance_pass_rate.json  transfer_report.json
infra/: budget_state.py  otel.yaml
javu_agi/: __init__.py  adaptive_engine.py  aesthetic_judgment.py  agent_interaction.py  agi_inventor.py  agi_manager.py  alignment_auditor.py  alignment_checker.py  analogy_engine.py  anomaly_guard.py  api_server.py  audio_transcriber.py  audit_log.py  auto_modul_generator.py  auto_stop.py  autonomous_loop.py  autonomy.py  bank_guard.py  belief_state.py  body_schema.py  budget_guard.py  capabilities.py  causal_adapter.py  config.py  (+219 more)
(+417 files in other folders)
