[tool.poetry]
name = "javu-agi"
version = "0.1.0"
description = "JAVU AGI core"
authors = ["roman <roman@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sentence-transformers = "2.5.1"
langgraph = "0.0.40"
langchain = "0.1.20"
openai = "1.35.13"
chromadb = "0.5.5"
typing_extensions = ">=4.7.0"
pydantic = "2.7.4"
langchain-openai = "0.1.7"
python-dotenv = "1.0.1"
tokenizers = "0.21.2"
typer = "0.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"

[tool.poetry.scripts]
javu = "javu_agi.core:cli"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-select = ["E","F","I","UP","B","ASYNC","S","PL","RUF"]
ignore = ["S101"]  # allow assert in tests
src = ["."]
exclude = ["venv", ".venv", ".git", "build", "dist", "**/__pycache__"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic value ok in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
exclude = '(venv|\.venv|build|dist|\.git|__pycache__)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"